# SOEM

./: CMakeLists.txt
.github/workflows/: build.yml
additional/: cyclic.c  cyclic.h  modified_soem_functions.c  modified_soem_functions.h
osal/: osal.h
osal/linux/: osal.c  osal_defs.h
oshw/linux/: nicdrv.c  nicdrv.h  oshw.c
soem/: ethercatcoe.c  ethercatcoe.h  ethercatconfig.c  ethercatconfig.h  ethercatdc.h  ethercatmain.c  ethercatmain.h  ethercatprint.c  ethercatprint.h  ethercatsoe.h  ethercattype.h
